Fix inverse color for dark mode.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
     --pico-primary: #31B8C6;
     --pico-primary-hover: #268D96;
     --pico-primary-focus: rgba(49, 184, 198, 0.125);
-    --pico-primary-inverse: #000;
+    --pico-primary-inverse: #1F2121;
 }
 
 body {
